...
        padding: const EdgeInsets.all(16.0), // Padding all sides
        child: Column(
          mainAxisAlignment: MainAxisAlignment.center,
          crossAxisAlignment: CrossAxisAlignment.center,
          children: [
            Text(
              'How many cups would you like?', //text for cups
              textAlign: TextAlign.center,
              style: TextStyle(
                color: Color(0xFF4C748B), // Text color
                fontSize: 18,
                fontWeight: FontWeight.normal, // Regular weight
              ),
            ),
            SizedBox(height: 20), // Spacing
            TextField(
              key: ValueKey('numCups'),
              controller: _controller,
              keyboardType: TextInputType.number, // Numeric input
              onChanged: textStatus,
              textAlign: TextAlign.center, // Text align
              decoration: InputDecoration(
                filled: true,
...
