...
                  // Navigate to ChooseDeviceScreen
                  context,
                  MaterialPageRoute(builder: (context) => ChooseDeviceScreen()),
                  (Route<dynamic> route) => false,
                );
              },
              child: Text('Done'),
              style: ButtonStyle(
                backgroundColor: MaterialStateProperty.resolveWith<Color>(
                    (Set<MaterialState> states) =>
                        states.contains(MaterialState.disabled)
                            ? Color(0xFFE2E2E2)
                            : Color(0xFF4C748B)), // Background color
...
